--- a/playbooks/oem_blackout/oem-blackout/tasks/script_exclusion.yml
+++ b/playbooks/oem_blackout/oem-blackout/tasks/script_exclusion.yml
@@ -79,6 +79,7 @@
     - name: Update Host Comment Property With Excluded Host
       shell: |
         export PATH=$PATH:{{ emcli_java_location }}
+        echo "{{ emcli }} set_target_property_value -property_records='{{ get_agent_host.stdout }}:host:Comment:{{ exclude_comment }}'"
         {{ emcli }} set_target_property_value -property_records="{{ get_agent_host.stdout }}:host:Comment:{{ exclude_comment }}"
       register: updatecomment
 
