--- a/playbooks/oem_blackout/oem-blackout/tasks/main.yml
+++ b/playbooks/oem_blackout/oem-blackout/tasks/main.yml
@@ -1,3 +1,7 @@
+- name: Show parsed duration value
+  debug:
+    var: duration
+    
 - name: Check if Cloud Control Agent Installed
   stat:
     path: "{{ emctl_agent }}"
