--- a/playbooks/oem_blackout/oem-blackout/tasks/script_exclusion.yml
+++ b/playbooks/oem_blackout/oem-blackout/tasks/script_exclusion.yml
@@ -33,7 +33,7 @@
     - name: Set default value for duration if not defined
       set_fact:
         duration: "30 00:00"
-      when: (duration is not defined) or (duration | default('') | string | length == 0)
+      when: (duration is not defined) or (not duration)
 
     - name: Print the duration value passed in
       debug:
