--- a/playbooks/oem_blackout/oem-blackout/tasks/main.yml
+++ b/playbooks/oem_blackout/oem-blackout/tasks/main.yml
@@ -83,5 +83,5 @@
 - name: Disable OEM Script-Based Monitoring if no Diagnostic Pack
   include_tasks: script_exclusion.yml
   vars:
-    duration: "{{ duration | quote }}"
+    duration: "{{ duration }}"
   when: not has_diagnostic_pack
