--- a/.github/workflows/oracle-db-oem-blackout.yml
+++ b/.github/workflows/oracle-db-oem-blackout.yml
@@ -92,7 +92,7 @@ permissions:
 jobs:
   deployment:
     name: oracle-db-oem-blackout
-    environment: ${{ github.event.inputs.TargetEnvironment }}
+    environment: ${{ github.event.inputs.TargetEnvironment }}-preapproved
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.80.0
