--- a/playbooks/oem_blackout/oem-blackout/tasks/main.yml
+++ b/playbooks/oem_blackout/oem-blackout/tasks/main.yml
@@ -1,3 +1,8 @@
+- name: Set default value for emctl_agent if not defined
+  set_fact:
+    emctl_agent: "/u01/app/oracle/product/oem-agent/agent_inst/bin/emctl"
+  when: emctl_agent is not defined
+
 - name: Check if Cloud Control Agent Installed
   stat:
     path: "{{ emctl_agent }}"
