Allow skip of OEM target updates if nothing has been deinstalled

--- a/playbooks/oracle_release_update/deinstall_oracle.yml
+++ b/playbooks/oracle_release_update/deinstall_oracle.yml
@@ -8,7 +8,7 @@
 
 # Run the following to Update OEM Targets
 # This playbook runs ONLY on a single target host because emcli is installed
-- hosts: "{{ hostvars.localhost.deinstalled_targets[0] }}"
+- hosts: "{{ hostvars.localhost.deinstalled_targets[0] | default('skip_update') }}"
   gather_facts: no
   become: yes
   become_user: oracle
