--- a/.github/workflows/ldap-data-refresh.yml
+++ b/.github/workflows/ldap-data-refresh.yml
@@ -93,20 +93,39 @@ jobs:
     runs-on: ubuntu-latest
     environment: delius-core-${{ github.event.inputs.destination_env }}-preapproved
     steps:
+      - name: "Configure AWS Credentials"
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: "arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/modernisation-platform-oidc-cicd"
+          role-session-name: "hmpps-delius-operational-automation-${{ github.run_number }}"
+          aws-region: "eu-west-2"
+
       - name: Get list of test users
         run: |
           destination_env="${{ github.event.inputs.destination_env }}"
           TEST_USERS="${{ github.event.inputs.test_users }}"
 
-          if [[ "${destination_env}" == "preprod" ]]; then
+          ##if [[ "${destination_env}" == "preprod" ]]; then
+          if [[ "${destination_env}" == "dev" ]]; then
             echo "Checking test users have been supplied..."
             if [[ -z "${TEST_USERS}" ]]; then
               # try get list of users from AWS secret
-              TEST_USERS=$( get aws secret value here)
-              if [[ error code ]]; then
+
+              SECRET_NAME="ldap_test_users"
+              REGION="eu-west-2"
+
+              TEST_USERS=$(aws secretsmanager get-secret-value \
+                --secret-id "$SECRET_NAME" \
+                --region "$REGION" \
+                --query SecretString \
+                --output text 2>/tmp/aws_secret_error)
+
+              if [[ $? -ne 0 ]]; then
+                echo "Failed to retrieve test users from AWS Secrets Manager:"
+                cat /tmp/aws_secret_error
                 echo "Test users list has not been supplied, cancelling run..." 
                 exit 1
-              elif [[ success code ]]; then
+              else
                 echo "Test users list supplied, number of users is: $(echo ${TEST_USERS} | sed '/^\s*$/d' | wc -l)"
               fi
             else
@@ -151,7 +170,14 @@ jobs:
     secrets: inherit
   import-test-users: # check escaping here
     needs: remove-passwords
-    steps:    
+    steps:
+      - name: "Configure AWS Credentials"
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: "arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/modernisation-platform-oidc-cicd"
+          role-session-name: "hmpps-delius-operational-automation-${{ github.run_number }}"
+          aws-region: "eu-west-2"
+
       - name: Import test users
         if: ${{ env.destination_env == 'preprod' }}
         run: |
